--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,5 @@
 <div class="container">
-    <div class="has-text-centered title">hello worlds</div>
+    <h1 class="has-text-centered title">hello worlds</h1>
     <hr/>
-    <div class="columns">
-        <div class="column is-4">
-            <h2 class="subtitle">List Tasks</h2>
-        </div>
-        <div class="column">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Activity</th>
-                        <th>Complete</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Sweeping</td>
-                        <td>
-                            <button class="button is-link">Complete</button>
-                        </td>
-                        <td>
-                            <button class="button is-danger">Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <app-grid></app-grid>
 </div>
