--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="has-text-centered title">hello worlds</h1>
+    <h1 class="has-text-centered title">Tasks</h1>
     <hr/>
     <app-grid></app-grid>
 </div>
