--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -15,7 +15,7 @@
                 <button class="button is-link">Complete</button>
             </td>
             <td>
-                <button class="button is-danger">Delete</button>
+                <button class="button is-danger" (click)="delete()">Delete</button>
             </td>
         </tr>
     </tbody>
