--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -1,7 +1,7 @@
-<table class="table">
+<table class="table is-fullwidth">
     <thead>
         <tr>
-            <th>ID2</th>
+            <th>ID</th>
             <th>Activity</th>
             <th>Complete</th>
             <th>Delete</th>
@@ -10,9 +10,12 @@
     <tbody>
         <tr *ngFor="let item of tasks; index as i">
             <td>{{i+1}}</td>
-            <td>{{item.task}}</td>
             <td>
-                <button class="button is-link">Complete</button>
+                <b [ngClass]="item.complete ? 'is-through' : ''">{{item.task}}</b>
+
+            </td>
+            <td>
+                <button class="button is-link" (click)="complete(item)" >Complete</button>
             </td>
             <td>
                 <button class="button is-danger" (click)="delete(item)">Delete</button>
